lab3/tiger.output
状态 1 conflicts: 1 shift/reduce
状态 31 conflicts: 1 shift/reduce
状态 34 conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | NIL
    4    | INT
    5    | STRING
    6    | BREAK
    7    | MINUS exp
    8    | LPAREN expseq RPAREN
    9    | IF exp THEN exp ELSE exp
   10    | IF exp THEN exp
   11    | WHILE exp DO exp
   12    | FOR ID ASSIGN exp TO exp DO exp
   13    | LET decs IN expseq END
   14    | ID LBRACK exp RBRACK OF exp
   15    | ID LBRACE rec RBRACE
   16    | ID LPAREN params RPAREN
   17    | exp PLUS exp
   18    | exp MINUS exp
   19    | exp TIMES exp
   20    | exp DIVIDE exp
   21    | exp EQ exp
   22    | exp NEQ exp
   23    | exp LT exp
   24    | exp LE exp
   25    | exp GT exp
   26    | exp GE exp
   27    | exp AND exp
   28    | exp OR exp
   29    | lvalue ASSIGN exp

   30 rec: %empty
   31    | recs

   32 recs: ID EQ exp
   33     | ID EQ exp COMMA recs

   34 expseq: %empty
   35       | exps

   36 exps: exp
   37     | exp SEMICOLON exps

   38 params: %empty
   39       | param

   40 param: exp
   41      | exp COMMA param

   42 decs: %empty
   43     | dec decs

   44 dec: tydecs
   45    | vardec
   46    | fundecs

   47 tydecs: tydec
   48       | tydec tydecs

   49 tydec: TYPE ID EQ ty

   50 ty: ID
   51   | LBRACE tyfields RBRACE
   52   | ARRAY OF ID

   53 tyfields: %empty
   54         | tyf

   55 tyf: ID COLON ID
   56    | ID COLON ID COMMA tyf

   57 vardec: VAR ID ASSIGN exp
   58       | VAR ID COLON ID ASSIGN exp

   59 fundecs: fundec
   60        | fundec fundecs

   61 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   62       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   63 lvalue: ID
   64       | lvalue DOT ID
   65       | lvalue LBRACK exp RBRACK
   66       | ID LBRACK exp RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 12 14 15 16 32 33 49 50 52 55 56 57 58 61 62 63 64 66
STRING (259) 5
INT (260) 4
COMMA (261) 33 41 56
COLON (262) 55 56 58 62
SEMICOLON (263) 37
LPAREN (264) 8 16 61 62
RPAREN (265) 8 16 61 62
LBRACK (266) 14 65 66
RBRACK (267) 14 65 66
LBRACE (268) 15 51
RBRACE (269) 15 51
DOT (270) 64
PLUS (271) 17
MINUS (272) 7 18
TIMES (273) 19
DIVIDE (274) 20
EQ (275) 21 32 33 49 61 62
NEQ (276) 22
LT (277) 23
LE (278) 24
GT (279) 25
GE (280) 26
UMINUS (281)
AND (282) 27
OR (283) 28
ASSIGN (284) 12 29 57 58
ARRAY (285) 52
IF (286) 9 10
THEN (287) 9 10
ELSE (288) 9
WHILE (289) 11
FOR (290) 12
TO (291) 12
DO (292) 11 12
LET (293) 13
IN (294) 13
END (295) 13
OF (296) 14 52
BREAK (297) 6
NIL (298) 3
FUNCTION (299) 61 62
VAR (300) 57 58
TYPE (301) 49


Nonterminals, with rules where they appear

$accept (47)
    左： 0
program (48)
    左： 1, 右： 0
exp (49)
    左： 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29, 右： 1 7 9 10 11 12 14 17 18 19 20 21 22 23
    24 25 26 27 28 29 32 33 36 37 40 41 57 58 61 62 65 66
rec (50)
    左： 30 31, 右： 15
recs (51)
    左： 32 33, 右： 31 33
expseq (52)
    左： 34 35, 右： 8 13
exps (53)
    左： 36 37, 右： 35 37
params (54)
    左： 38 39, 右： 16
param (55)
    左： 40 41, 右： 39 41
decs (56)
    左： 42 43, 右： 13 43
dec (57)
    左： 44 45 46, 右： 43
tydecs (58)
    左： 47 48, 右： 44 48
tydec (59)
    左： 49, 右： 47 48
ty (60)
    左： 50 51 52, 右： 49
tyfields (61)
    左： 53 54, 右： 51 61 62
tyf (62)
    左： 55 56, 右： 54 56
vardec (63)
    左： 57 58, 右： 45
fundecs (64)
    左： 59 60, 右： 46 60
fundec (65)
    左： 61 62, 右： 59 60
lvalue (66)
    左： 63 64 65 66, 右： 2 29 64 65


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  转到状态 12
    exp      转到状态 13
    lvalue   转到状态 14


State 1

   14 exp: ID . LBRACK exp RBRACK OF exp
   15    | ID . LBRACE rec RBRACE
   16    | ID . LPAREN params RPAREN
   63 lvalue: ID .
   66       | ID . LBRACK exp RBRACK

    LPAREN  shift, and go to state 15
    LBRACK  shift, and go to state 16
    LBRACE  shift, and go to state 17

    LBRACK    [reduce using rule 63 (lvalue)]
    $default  reduce using rule 63 (lvalue)


State 2

    5 exp: STRING .

    $default  reduce using rule 5 (exp)


State 3

    4 exp: INT .

    $default  reduce using rule 4 (exp)


State 4

    8 exp: LPAREN . expseq RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 34 (expseq)

    exp     转到状态 18
    expseq  转到状态 19
    exps    转到状态 20
    lvalue  转到状态 14


State 5

    7 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 21
    lvalue  转到状态 14


State 6

    9 exp: IF . exp THEN exp ELSE exp
   10    | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 22
    lvalue  转到状态 14


State 7

   11 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 23
    lvalue  转到状态 14


State 8

   12 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 24


State 9

   13 exp: LET . decs IN expseq END

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    $default  reduce using rule 42 (decs)

    decs     转到状态 28
    dec      转到状态 29
    tydecs   转到状态 30
    tydec    转到状态 31
    vardec   转到状态 32
    fundecs  转到状态 33
    fundec   转到状态 34


State 10

    6 exp: BREAK .

    $default  reduce using rule 6 (exp)


State 11

    3 exp: NIL .

    $default  reduce using rule 3 (exp)


State 12

    0 $accept: program . $end

    $end  shift, and go to state 35


State 13

    1 program: exp .
   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47

    $default  reduce using rule 1 (program)


State 14

    2 exp: lvalue .
   29    | lvalue . ASSIGN exp
   64 lvalue: lvalue . DOT ID
   65       | lvalue . LBRACK exp RBRACK

    LBRACK  shift, and go to state 48
    DOT     shift, and go to state 49
    ASSIGN  shift, and go to state 50

    $default  reduce using rule 2 (exp)


State 15

   16 exp: ID LPAREN . params RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 38 (params)

    exp     转到状态 51
    params  转到状态 52
    param   转到状态 53
    lvalue  转到状态 14


State 16

   14 exp: ID LBRACK . exp RBRACK OF exp
   66 lvalue: ID LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 54
    lvalue  转到状态 14


State 17

   15 exp: ID LBRACE . rec RBRACE

    ID  shift, and go to state 55

    $default  reduce using rule 30 (rec)

    rec   转到状态 56
    recs  转到状态 57


State 18

   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp
   36 exps: exp .
   37     | exp . SEMICOLON exps

    SEMICOLON  shift, and go to state 58
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    TIMES      shift, and go to state 38
    DIVIDE     shift, and go to state 39
    EQ         shift, and go to state 40
    NEQ        shift, and go to state 41
    LT         shift, and go to state 42
    LE         shift, and go to state 43
    GT         shift, and go to state 44
    GE         shift, and go to state 45
    AND        shift, and go to state 46
    OR         shift, and go to state 47

    $default  reduce using rule 36 (exps)


State 19

    8 exp: LPAREN expseq . RPAREN

    RPAREN  shift, and go to state 59


State 20

   35 expseq: exps .

    $default  reduce using rule 35 (expseq)


State 21

    7 exp: MINUS exp .
   17    | exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    $default  reduce using rule 7 (exp)


State 22

    9 exp: IF exp . THEN exp ELSE exp
   10    | IF exp . THEN exp
   17    | exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    THEN    shift, and go to state 60


State 23

   11 exp: WHILE exp . DO exp
   17    | exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    DO      shift, and go to state 61


State 24

   12 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 62


State 25

   61 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   62       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 63


State 26

   57 vardec: VAR . ID ASSIGN exp
   58       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 64


State 27

   49 tydec: TYPE . ID EQ ty

    ID  shift, and go to state 65


State 28

   13 exp: LET decs . IN expseq END

    IN  shift, and go to state 66


State 29

   43 decs: dec . decs

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    $default  reduce using rule 42 (decs)

    decs     转到状态 67
    dec      转到状态 29
    tydecs   转到状态 30
    tydec    转到状态 31
    vardec   转到状态 32
    fundecs  转到状态 33
    fundec   转到状态 34


State 30

   44 dec: tydecs .

    $default  reduce using rule 44 (dec)


State 31

   47 tydecs: tydec .
   48       | tydec . tydecs

    TYPE  shift, and go to state 27

    TYPE      [reduce using rule 47 (tydecs)]
    $default  reduce using rule 47 (tydecs)

    tydecs  转到状态 68
    tydec   转到状态 31


State 32

   45 dec: vardec .

    $default  reduce using rule 45 (dec)


State 33

   46 dec: fundecs .

    $default  reduce using rule 46 (dec)


State 34

   59 fundecs: fundec .
   60        | fundec . fundecs

    FUNCTION  shift, and go to state 25

    FUNCTION  [reduce using rule 59 (fundecs)]
    $default  reduce using rule 59 (fundecs)

    fundecs  转到状态 69
    fundec   转到状态 34


State 35

    0 $accept: program $end .

    $default  接受


State 36

   17 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 70
    lvalue  转到状态 14


State 37

   18 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 71
    lvalue  转到状态 14


State 38

   19 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 72
    lvalue  转到状态 14


State 39

   20 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 73
    lvalue  转到状态 14


State 40

   21 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 74
    lvalue  转到状态 14


State 41

   22 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 75
    lvalue  转到状态 14


State 42

   23 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 76
    lvalue  转到状态 14


State 43

   24 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 77
    lvalue  转到状态 14


State 44

   25 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 78
    lvalue  转到状态 14


State 45

   26 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 79
    lvalue  转到状态 14


State 46

   27 exp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 80
    lvalue  转到状态 14


State 47

   28 exp: exp OR . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 81
    lvalue  转到状态 14


State 48

   65 lvalue: lvalue LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 82
    lvalue  转到状态 14


State 49

   64 lvalue: lvalue DOT . ID

    ID  shift, and go to state 83


State 50

   29 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 84
    lvalue  转到状态 14


State 51

   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp
   40 param: exp .
   41      | exp . COMMA param

    COMMA   shift, and go to state 85
    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47

    $default  reduce using rule 40 (param)


State 52

   16 exp: ID LPAREN params . RPAREN

    RPAREN  shift, and go to state 86


State 53

   39 params: param .

    $default  reduce using rule 39 (params)


State 54

   14 exp: ID LBRACK exp . RBRACK OF exp
   17    | exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp
   66 lvalue: ID LBRACK exp . RBRACK

    RBRACK  shift, and go to state 87
    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47


State 55

   32 recs: ID . EQ exp
   33     | ID . EQ exp COMMA recs

    EQ  shift, and go to state 88


State 56

   15 exp: ID LBRACE rec . RBRACE

    RBRACE  shift, and go to state 89


State 57

   31 rec: recs .

    $default  reduce using rule 31 (rec)


State 58

   37 exps: exp SEMICOLON . exps

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 18
    exps    转到状态 90
    lvalue  转到状态 14


State 59

    8 exp: LPAREN expseq RPAREN .

    $default  reduce using rule 8 (exp)


State 60

    9 exp: IF exp THEN . exp ELSE exp
   10    | IF exp THEN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 91
    lvalue  转到状态 14


State 61

   11 exp: WHILE exp DO . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 92
    lvalue  转到状态 14


State 62

   12 exp: FOR ID ASSIGN . exp TO exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     转到状态 93
    lvalue  转到状态 14


State 63

   61 fundec: FUNCTION ID . LPAREN tyfields RPAREN EQ exp
   62       | FUNCTION ID . LPAREN tyfields RPAREN COLON ID EQ exp

    LPAREN  shift, and go to state 94


State 64

   57 vardec: VAR ID . ASSIGN exp
   58       | VAR ID . COLON ID ASSIGN exp

    COLON   shift, and go to state 95
    ASSIGN  shift, and go to state 96


State 65

   49 tydec: TYPE ID . EQ ty

    EQ  shift, and go to state 97


State 66

   13 exp: LET decs IN . expseq END

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 34 (expseq)

    exp     转到状态 18
    expseq  转到状态 98
    exps    转到状态 20
    lvalue  转到状态 14


State 67

   43 decs: dec decs .

    $default  reduce using rule 43 (decs)


State 68

   48 tydecs: tydec tydecs .

    $default  reduce using rule 48 (tydecs)


State 69

   60 fundecs: fundec fundecs .

    $default  reduce using rule 60 (fundecs)


State 70

   17 exp: exp . PLUS exp
   17    | exp PLUS exp .
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    $default  reduce using rule 17 (exp)


State 71

   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   18    | exp MINUS exp .
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    $default  reduce using rule 18 (exp)


State 72

   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   19    | exp TIMES exp .
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    $default  reduce using rule 19 (exp)


State 73

   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   20    | exp DIVIDE exp .
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    $default  reduce using rule 20 (exp)


State 74

   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   21    | exp EQ exp .
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 21 (exp)


State 75

   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   22    | exp NEQ exp .
   23    | exp . LT exp
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 22 (exp)


State 76

   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   23    | exp LT exp .
   24    | exp . LE exp
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 23 (exp)


State 77

   17 exp: exp . PLUS exp
   18    | exp . MINUS exp
   19    | exp . TIMES exp
   20    | exp . DIVIDE exp
   21    | exp . EQ exp
   22    | exp . NEQ exp
   23    | exp . LT exp
   24    | exp . LE exp
   24    | exp LE exp .
   25    | exp . GT exp
   26    | exp . GE exp
   27    | exp . AND exp
   28    | exp . OR exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
